--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,6 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
-
 # Distribution / packaging
 .Python
 build/
@@ -34,7 +31,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -140,3 +136,5 @@ dmypy.json
 .pyre/
 
 data
+
+logs/
